updated requirements.txt and gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,6 @@
 __pycache__/
 page_help.py
 helper.py
+Bincom ICT Recruitment Preliminary Questionnaire - Google Docs.pdf
+My Software Enginnering Resume.pdf
+sOLUTION - Google Docs.pdf
